--- a/final.html
+++ b/final.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ss create Bloom & Bliss</title>
+    <title>gs create Bloom & Bliss</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -127,5 +127,6 @@
 
 </body>
 </html>
+
 
 
